# mqtt-hyundai-kia

./: .aisanity  .dockerignore  .env.example  DOCKER_DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  README.md  debug_production.py  docker-compose.yml  main.py  mosquitto.conf  pyproject.toml  test_climate_commands.py  test_mqtt_flow.py  test_mqtt_publish.sh  validate_docker_setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
.plan/: 10-implement-hyundai-mqtt-integration.md  20-fix-blocking-api-calls-deadlock.md  30-implement-eu-vehicle-control-confirmation.md  40-implement-token-refresh-retry.md  arch_10-implement-hyundai-mqtt-integration.md  arch_20-fix-blocking-api-calls-deadlock.md  arch_30-implement-eu-vehicle-control-confirmation.md  arch_40-implement-token-refresh-retry.md
.task/: 10-implement-hyundai-mqtt-integration.md  20-fix-blocking-api-calls-deadlock.md  30-implement-eu-vehicle-control-confirmation.md  40-implement-token-refresh-retry.md
src/: __init__.py  main.py
src/commands/: __init__.py  handler.py
src/config/: __init__.py  settings.py
src/hyundai/: __init__.py  api_client.py  data_mapper.py  eu_action_status.py
src/mqtt/: __init__.py  client.py  topics.py
src/utils/: __init__.py  errors.py  logger.py
